<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/rojo"
    android:onClick="finish(); "
    android:orientation="vertical"
    tools:context=".WhereEat" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/returnbtn"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="@drawable/backbtn"
             />

        <ImageView
            android:id="@+id/imageView1"
            android:contentDescription="@string/img"
            android:layout_width="192dp"
            android:layout_height="44dp"
            android:src="@drawable/logo_white" />
        <Button
            android:id="@+id/infobtn"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:background="@drawable/infobtn" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:orientation="vertical"
        android:padding="20dp" >

        <LinearLayout
            android:id="@+id/tituloCont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center" >

            <LinearLayout
                android:id="@+id/logo"
                android:layout_width="64dp"
                android:layout_height="match_parent"
                android:background="@drawable/car"
                android:orientation="vertical"
                android:textAlignment="center" >
            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/registro"
                android:textSize="50sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="textEmailAddress"
            android:padding="5dp" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:padding="5dp" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:padding="5dp" />

        <Button
            android:id="@+id/registrar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn"
            android:text="@string/registrar"
            android:textColor="@color/blanco" />

    </LinearLayout>

</LinearLayout>