<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/rojo"
    android:gravity="top"
    android:orientation="vertical"
    tools:context=".WhereEat" >

     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/returnbtn"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="@drawable/backbtnxml" />

        <ImageView
            android:id="@+id/imageView1"
            android:contentDescription="@string/img"
            android:layout_width="192dp"
            android:layout_height="44dp"
            android:src="@drawable/logo_white" />
        
        <Button
            android:id="@+id/infobtn"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:background="@drawable/infobtn" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:gravity="top"
        android:orientation="vertical"
        android:padding="7dp" >

            <LinearLayout
                android:id="@+id/contenido"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/imgRest"
                    android:layout_width="match_parent"
                    android:layout_height="101dp"
                    android:layout_marginTop="3dp"
                    android:contentDescription="@string/img" />

<ScrollView
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="top"
                    android:layout_weight="37558.50"
                    android:baselineAligned="false"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:layout_width="180dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="0.00"
                        android:orientation="vertical"
                        android:paddingBottom="20dp" >

                        <TextView
                            android:id="@+id/sucTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/direccion"
                            android:textColor="@color/rojo"
                            android:textSize="17sp"
                            android:textStyle="bold" />
                        
                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/direccion"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/addressRest"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="3dp"
                            android:ellipsize="none"
                            android:maxLines="100"
                            android:scrollHorizontally="false"
                            android:text="@string/addrs" />

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:text="@string/tel"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/phoneRest"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="3dp"
                            android:text="@string/phone" />

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:text="@string/horarios"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/daysRest"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="3dp"
                            android:text="@string/dias" />

                        <TextView
                            android:id="@+id/hoursRest"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="3dp"
                            android:text="@string/hras" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:text="@string/web"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/webRest"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="3dp"
                            android:text="@string/paginasalad"
                            android:textColor="@color/link" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dip"
                        android:layout_height="fill_parent"
                        android:layout_weight="0.01"
                        android:baselineAligned="false"
                        android:orientation="horizontal" >

                        <LinearLayout
                            android:layout_width="0dip"
                            android:layout_height="match_parent"
                            android:layout_marginTop="30dp"
                            android:layout_weight="0.49"
                            android:orientation="vertical" >

                            <LinearLayout
                                android:layout_width="97dp"
                                android:layout_height="63dp"
                                android:layout_gravity="center"
                                android:layout_marginTop="5dp"
                                android:background="@drawable/check_box"
                                android:gravity="center"
                                android:orientation="vertical" >

                                <TextView
                                    android:id="@+id/checks"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:text="@string/checks"
                                    android:textColor="@color/grisLista"
                                    android:textSize="15sp" />
                            </LinearLayout>

                            <Button
                                android:id="@+id/checkInbtn"
                                android:layout_width="113dp"
                                android:layout_height="44dp"
                                android:layout_gravity="center"
                                android:layout_marginTop="3dp"
                                android:background="@drawable/btncheck"
                                android:paddingLeft="17dp"
                                android:text="@string/checkIn"
                                android:textColor="@color/blanco"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                            <Button
                                android:id="@+id/menubtn"
                                android:layout_width="113dp"
                                android:layout_height="44dp"
                                android:layout_gravity="center"
                                android:layout_marginTop="3dp"
                                android:background="@drawable/btnmenu"
                                android:paddingLeft="17dp"
                                android:text="@string/menu"
                                android:textColor="@color/blanco"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                            <ImageView
                                android:id="@+id/share"
                                android:layout_width="75dp"
                                android:layout_height="30dp"
                                android:layout_gravity="right"
                                android:layout_marginTop="8dp"
                                android:contentDescription="@string/img"
                                android:src="@drawable/share" />

                            <ImageView
                                android:id="@+id/tweet"
                                android:layout_width="75dp"
                                android:layout_height="30dp"
                                android:layout_gravity="right"
                                android:layout_marginTop="5dp"
                                android:contentDescription="@string/img"
                                android:src="@drawable/twitter" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
               </ScrollView>
            </LinearLayout>
        
    </LinearLayout>

</LinearLayout>