<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/rojo"
    android:orientation="vertical"
    tools:context=".WhereEat" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/returnbtn"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="@drawable/backbtnxml" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="192dp"
            android:layout_height="44dp"
            android:contentDescription="@string/img"
            android:src="@drawable/logo_white" />

        <Button
            android:id="@+id/infobtn"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:background="@drawable/infobtn" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp" >

        <LinearLayout
            android:id="@+id/logo"
            android:layout_width="132dp"
            android:layout_height="114dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/car"
            android:gravity="center"
            android:orientation="vertical"
            android:textAlignment="center" >

        </LinearLayout>

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:padding="5dp" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:padding="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" >

            <Button
                android:id="@+id/iniciarbtn"
                android:layout_width="109dp"
                android:layout_height="40dp"
                android:background="@drawable/btn"
                android:text="@string/Iniciar"
                android:textColor="@color/blanco" />

            <Button
                android:id="@+id/fbbtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:background="@drawable/fb" />
        </LinearLayout>

        <Button
            android:id="@+id/registrarbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:text="@string/registra"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>