<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/casiblanco"
    android:gravity="center_vertical|center_horizontal|center"
    android:orientation="vertical"
    android:padding="8dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal|center"
        android:gravity="center_vertical|center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="189dp"
            android:layout_height="37dp"
            android:layout_gravity="center"
            android:contentDescription="@string/img"
            android:src="@drawable/logo_" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:text="@string/version"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="99dp"
            android:layout_height="82dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/img"
            android:src="@drawable/car" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/julia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="3dp"
                    android:text="@string/julia"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/karen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="2dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/karen"
                    android:textSize="12sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="100dp"
                android:layout_height="55dp"
                android:contentDescription="@string/img"
                android:src="@drawable/logoequipo" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>